# lemon-pyopenjtalk-prebuilt

./: .gitignore  README.en.md  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: build_and_release.yml  check_new_python.yml
