[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "cython>=0.29.16",
    "cmake",
    "numpy>=1.25.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lemon-pyopenjtalk-prebuilt"
dynamic = ["version"]
description = "Prebuilt binary wheels for pyopenjtalk (Python wrapper for OpenJTalk)"
readme = "README.md"
requires-python = ">=3.10"
license.file = "LICENSE.md"
authors = [
    { name = "Ryuichi Yamamoto", email = "zryuichi@gmail.com" },
    { name = "LemonDouble" },
]
keywords = ["OpenJTalk", "TTS", "Japanese", "Text-to-Speech"]
classifiers = [
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
urls.Homepage = "https://github.com/LemonDoubleHQ/lemon-pyopenjtalk-prebuilt"
urls.Source = "https://github.com/r9y9/pyopenjtalk"
dependencies = [
    "numpy>=1.20.0",
    "tqdm",
]

[project.optional-dependencies]
test = ["pytest", "scipy"]
marine = ["marine>=0.0.5"]

[tool.setuptools.packages.find]
include = ["pyopenjtalk*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyx", "*.pxd"]

[tool.setuptools_scm]
version_file = "pyopenjtalk/version.py"
version_file_template = '__version__ = "{version}"\n'
local_scheme = "no-local-version" # PyPI는 로컬 버전 식별자를 거부

# ── cibuildwheel 설정 ────────────────────────────────────────────────────────
# check_new_python.yml 워크플로우가 새 Python 버전 감지 시 이 줄을 자동 업데이트합니다.
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["*-musllinux*", "*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
